--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#3b82f6",
   "icons": [
     {
-      "src": "/window.svg",
+      "src": "/logo.svg",
       "sizes": "192x192",
       "type": "image/svg+xml"
     },
     {
-      "src": "/window.svg",
+      "src": "/logo.svg",
       "sizes": "512x512",
       "type": "image/svg+xml"
     }
