feat(pwa): enable offline support and installable PWA
- Integrated 'next-pwa' for Service Worker generation and offline caching.
- Added 'manifest.json' with proper icons and metadata.
- Implemented 'useOnlineStatus' hook and 'Offline Mode' UI indicators.
- Added 'Magic is Sleeping' state for AI features when offline.
- Resolved hydration mismatches in user, audio, and stats hooks.
- Refactored 'callGemini' to use IP-based rate limiting.
- Fixed 'Flash of Unauthenticated Content' (FOUC) in 'useUser'.
- Cleaned up linting errors and unused code.
- Added 'type-check' script to 'package.json'.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,33 @@
 {
-  "name": "Verb Adventure",
-  "short_name": "VerbAdv",
-  "description": "Master English irregular verbs through fun games!",
+  "name": "Verb Adventure: Irregular Verbs Mastery",
+  "short_name": "Verb Adventure",
+  "description": "Master English irregular verbs through fun games and magic!",
   "start_url": "/",
   "display": "standalone",
+  "orientation": "portrait",
   "background_color": "#eff6ff",
   "theme_color": "#3b82f6",
   "icons": [
     {
       "src": "/logo.svg",
       "sizes": "192x192",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
       "src": "/logo.svg",
       "sizes": "512x512",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
+      "src": "/logo.svg",
+      "sizes": "512x512",
+      "type": "image/svg+xml",
+      "purpose": "maskable"
     }
-  ]
+  ],
+  "scope": "/",
+  "categories": ["education", "games"],
+  "screenshots": []
 }
