--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,14 @@ yarn-error.log*
 # vercel
 .vercel
 
+# PWA
+public/sw.js
+public/sw.js.map
+public/workbox-*.js
+public/workbox-*.js.map
+public/worker-*.js
+public/worker-*.js.map
+
 # typescript
 *.tsbuildinfo
 next-env.d.ts
