--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:coverage": "vitest run --coverage",
     "commit": "git-cz",
-    "commit:validate": "npm run lint && npm run type-check && npm run build",
+    "commit:validate": "npm run format:check && npm run lint && npm run type-check && npm run build && npm run test:coverage",
     "format": "prettier --write .",
-    "check-format": "prettier --check .",
+    "format:check": "prettier --check .",
     "prepare": "husky"
   },
   "lint-staged": {
@@ -38,9 +40,13 @@
     "@commitlint/cli": "^20.4.1",
     "@commitlint/config-conventional": "^20.4.1",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
+    "@types/node": "^20.19.33",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@vitejs/plugin-react": "^5.1.3",
+    "@vitest/coverage-v8": "^4.0.18",
     "babel-plugin-react-compiler": "1.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "eslint": "^9",
@@ -48,10 +54,12 @@
     "eslint-config-prettier": "^10.1.8",
     "git-cz": "^4.9.0",
     "husky": "^9.1.7",
+    "jsdom": "^28.0.0",
     "lint-staged": "^16.2.7",
     "prettier": "^3.8.1",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.18"
   },
   "config": {
     "commitizen": {
